--- a/contactos.html
+++ b/contactos.html
@@ -3,68 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Cherie´s</title>
-    <link rel="stylesheet" href="estilo.css/propiedades.css"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <meta namw="viewport" content="width=device-width", initial-scale="1.0"/>
-    <!----
+    <meta name="viewport" content="width=device-width", initial-scale="1.0"/>
     <meta name="description" content="Reposteria New Cherie´s">
-    <meta name="keywords" content="new cherie,torta,catering,pedidos,nosotros,reporta,horario,sueños">
-    --->
-    <link rel="shortcut icon" href="./new_cherie/img/cherries.png">
-</head>
+    <meta name="keywords" content="new cherie,nosotros,ingrese,horarios,pasteleria">
+    <title>New Cherie´s</title>
+    <link rel="shortcut icon" href="./imagenes/icono.jpg">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="estilos/propiedades.css"/>
+  </head>
 <body>
-    <section id="seccion_areas-1">
-        <div id="titulo_principal">
-        <img src="./new_cherie/img/titulo.jpg" alt="Titulo" width="400" height="140">
-        </div>
- </section>
- <section id="menu">
-<nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #f16870;">
-<div class="container-fluid" id="recuadro">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="menu_play">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">Inicio</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="nosotros.html">Nosotros</a>
+  <div id="logo">
+    <img src="./imagenes/logo.jpg" alt="logo" width="170" height="200" style="background-position: center;">
+    </div>
+    <nav class="navbar navbar-expand-lg sticky-top navbar-light" style="background-color: #f8bbd0;">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Menu</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav nav-pills nav-fill">
+            <li class="nav-item">
+        <a class="nav-link" href="index.html">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contactos.html">Contactanos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="diseño.html">Diseña</a>
-          </li>
-          <li class="nav-item">
-        <a class="nav-link" href="tienda.html">Tienda</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href= #problema>Reporta algun problema</a>
+              <a class="nav-link" href="nosotros.html">Nosotros</a>
             </li>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-      </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+            <li class="nav-item">
+              <a class="nav-link" href="contactos.html">Contactanos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="diseño.html">Diseña</a>
+            </li>
+            <li class="nav-item">
+          <a class="nav-link" href="tienda.html">Tienda</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href= #problema>Reporta algun problema</a>
+              </li>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+        </ul>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">busca...</button>
+        </form>
+      </div>
+    </div>
+</nav>
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="./imagenes/inicio_portada.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="./imagenes/inicio_portada2.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="./imagenes/inicio_portada3.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
-</nav>
-</section>
-<div class="portada">
-  <img src="./new_cherie/img/portada.jpg" class="portada img-fluid"> 
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
+</header>
     <h2> Nosotros</h2>
    <h5>Deje a continuacion sus datos para enviarle en delivery</h5>
         <form action "">
@@ -162,78 +180,55 @@
                    </table>
                </section>
 </body>
-<footer id="problema">
-    <section id="pie">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.min.js" integrity="sha384-PsUw7Xwds7x08Ew3exXhqzbhuEYmA2xnwc8BuD6SEr+UmEHlX8/MCltYEodzWA4u" crossorigin="anonymous"></script>    
-    <div id="formulario">
-    <form action "">
-               <h7 class="titulo_tienda">Reporta tu problema</h7>  <hr>
-            <label for="nombre">Nombre y Apellido</label> 
-            <input type="text" id="nombre" placeholder="Ingrese su nombre">
-            <br>
-            <div>
-              <br>
-            <label for="mail">Email</label>
-            <input type="text" id="email" placeholder="Ingrese su email">
-            </div>
-            <br>
-            <div>
-            <label for="Telefono">Telefono</label>
-            <input type="text" id="cellphone" placeholder="Ingrese su telefono">
-           </div>
-           <br>
-           <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label">Reporte</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-          </div>
-      
-           <input type="submit" value="Enviar todo">
-           <input type="reset" value="Borrar todo">
-          </form>
-       </div>
-           <div id="tabla">
-            <table width="100%" heigh="100%">
-              <tr>
-                <th colspan="3" id="tabla_titulo">Horario de apertura</th> 
-                </tr>
-                <tr>
-                    <td>Lunes</td>      
-                    <td>08:00 A.M </td>
-                    <td> 19:00 P.M</td>
-                  </tr>
-                  <tr>
-                    <td> Martes </td> 
-                    <td>08:00 A.M </td>
-                    <td> 19:00 P.M</td>
-                </tr>   
-                  <tr>
-                    <td> Miercoles </td> 
-                    <td>08:00 A.M </td>
-                    <td> 19:00 P.M</td>
-                </tr>   
-                <tr>
-                    <td> Jueves </td> 
-                    <td>08:00 A.M </td>
-                    <td> 19:00 P.M</td>
-                </tr>   
-                <tr>
-                    <td> Viernes </td> 
-                    <td>08:00 A.M </td>
-                    <td> 19:00 P.M</td>
-                </tr>   
-                <tr>
-                <td> Sabado </td> 
-                <td colspan="2"> CERRADO </td>
-            </tr>   
-            <tr>
-                <td> Domingo </td> 
-                <td colspan="2"> CERRADO </td>
-            </tr>   
-            </table>
-      </div>
-      </section>
-        <section>
-    <p> Copyright © Todos los derechos reservados  </p>
-</footer>
-</html>
+<footer id="problema" class="pie">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.min.js" integrity="sha384-PsUw7Xwds7x08Ew3exXhqzbhuEYmA2xnwc8BuD6SEr+UmEHlX8/MCltYEodzWA4u" crossorigin="anonymous"></script> 
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+      <div class="pie--seccion1">
+  <ul class="nav flex-row">
+    <li class="nav-item">
+      <a class="nav-link link-danger" aria-current="page" href="#inicio.html">Inicio</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link link-danger"aria-current="page" href="#nosotros.html">Nosotros</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link link-danger" aria-current="page"href="#contactos.html">Contactanos</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link link-danger"aria-current="page" href="#diseña.html">Diseña</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link link-danger" aria-current="page" href="#tienda.html">Tienda</a>
+    </li>
+  </ul>  
+  <br>
+  <div>
+    <p>Nosotros somos una pagina de reposteria brindamos toda clase de pasteles dce la mejor mano de nuestros cocineros a nuestros clientes!
+      y diseñamos tu torta soñada con la medida y tamaño que vos quieras. Tambien nuestra tienda y en sus sucursales cuenta con la ventaja de comprar en un solo lugar
+      todos tus postres para retirar. Somos proovedores de restaurantes,bares,escuelas de chef de donde vienen nuestro equipo y hasta hoteles! 
+      Disfrute nuestro sitio web y consultar nuestro catologo diario para pedir o retirar!</p>
+      </div>   
+  </div>
+  <div class="pie--seccion2">
+  <div class="pie_icono">
+    <img src="./imagenes/icono_whatsapp.jpg" alt="whatsapp"height="50"/>
+    <p> Contactanos a nuestro numero, +54-112614353</p>
+  </div>
+  <div class="pie_icono">
+     <img src="./imagenes/icono_instagram.jpg" alt="@newcheries" height="50"/>
+    <p> Seguinos en Instagram!</p>
+  </div>
+  <div class="pie_icono">
+    <img src="./imagenes/icono_twitter.png" alt="@newcheries" height="50"/>
+   <p>Seguinos en Twitter!</p>
+  </div>  
+   </div>
+   <div class="copyright">
+    <p> Copyright © Todos los derechos reservados <a href="Inicio">Newcheries</a>  </p>
+  </div>
+  <div class="information">    
+<a href="">Information</a> | <a href="">Privacion y Politica</a> | <a href="">Terminos y Condiciones</a>
+</div>
+  </div>
+  </footer>
+      </html>
